fix: fix overflowing of html in x axis

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,6 @@
 
 html,
 body {
+    overflow-x: hidden;
     font-family: 'Inter', sans-serif;
 }
